# workspace

./: .gitignore  Dockerfile  README.md  arm  check_arch_arm.c  container-entry  cse30db  cse30db.1  gdb  hook_execve.c  shell-entry
.github/workflows/: docker-publish.yml
src/: index.html  server.js
workspace-logger/: Cargo.toml
workspace-logger/src/: main.rs
xterm/: package-lock.json  package.json  server.mjs  vite.config.js
xterm-rs/: Cargo.toml
xterm-rs/src/: main.rs
xterm-rs/src/caster/: cast.rs  mod.rs
xterm-rs/src/config/: mod.rs  watcher.rs
xterm-rs/src/models/: common.rs  mod.rs
xterm-rs/src/pty/: mod.rs  pty_manager.rs
xterm-rs/src/sockets/: mod.rs  socket_handler.rs  socket_handler_debug.rs
xterm-rs/static/js/: layout.mjs
xterm-rs/templates/: index.html
xterm/public/: client.js  index.html
