[package]
name = "workspace-logger"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
signal-hook = "0.3"
serde_json = "1"
flate2 = "1"
base64 = "0.22"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
serde = { version = "1", features = ["derive"] }
once_cell = "1"
