[package]
name = "xterm-rs"
version = "0.1.0"
edition = "2024"

[profile.release]
lto = true
strip = true
codegen-units = 1

[dependencies]
anyhow = "1"
askama = { version = "0.14", features = ["serde_json"] }
askama_web = { version = "0.14", features = ["axum-0.8"] }
thiserror = "2.0"
tokio = { version = "1.37", features = [
    "rt-multi-thread",
    "macros",
    "fs",
    "process",
    "signal",
] }
axum = { version = "0.8", features = ["macros", "ws"] }
tokio-tungstenite = { version = "0.26", default-features = false, features = [
    "tokio-native-tls",
] }
tower-http = { version = "0.6", features = ["fs"] }
portable-pty = "0.9"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
bytes = "1.10.1"
zstd = { version = "0.13", features = ["zstdmt"] }
once_cell = "1"
unsigned-varint = "0.8"
memchr = "2.7"
unicode-width = "0.2"
base64 = "0.22"
toml = "0.8"
notify-debouncer-mini = "0.6"
